dev-server.err.log
 ⨯ SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at loadManifest (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\load-manifest.js:36:25)
    at DevServer.getNextFontManifest (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\next-server.js:750:47)
    at DevServer.findPageComponents (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\dev\next-dev-server.js:571:43)
    at async DevServer.renderPageComponent (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\base-server.js:1910:24)
    at async DevServer.renderToResponseImpl (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\base-server.js:1962:32)
    at async DevServer.pipeImpl (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\base-server.js:922:25)
    at async NextNodeServer.handleCatchallRenderRequest (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\next-server.js:272:17)
    at async DevServer.handleRequestImpl (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\base-server.js:818:17)
    at async C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\dev\next-dev-server.js:339:20
    at async Span.traceAsyncFn (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\trace\trace.js:154:20)
    at async DevServer.handleRequest (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\dev\next-dev-server.js:336:24)
    at async invokeRender (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\lib\router-server.js:179:21)
    at async handleRequest (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\lib\router-server.js:359:24)
    at async requestHandlerImpl (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\lib\router-server.js:383:13)
    at async Server.requestListener (C:\Users\Laptop On Rent 137\Project-8\node_modules\next\dist\server\lib\start-server.js:141:13) {
  page: '/'
}
 ⨯ ./app/masters/gl/page.tsx
Error: 
  [31mx[0m Unexpected token `div`. Expected jsx identifier
     ,-[[36;1;4mC:\Users\Laptop On Rent 137\Project-8\app\masters\gl\page.tsx[0m:175:1]
 [2m175[0m |   ];
 [2m176[0m | 
 [2m177[0m |   return (
 [2m178[0m |     <div className="space-y-6 p-6">
     : [31;1m     ^^^[0m
 [2m179[0m |       <PageHeader
 [2m180[0m |         title="GL Accounts"
 [2m180[0m |         action={
     `----

Caused by:
    Syntax Error

Import trace for requested module:
./app/masters/gl/page.tsx
'wmic' is not recognized as an internal or external command,
operable program or batch file.
 ⨯ ./app/masters/gl/page.tsx
Error: 
  [31mx[0m Unexpected token `div`. Expected jsx identifier
     ,-[[36;1;4mC:\Users\Laptop On Rent 137\Project-8\app\masters\gl\page.tsx[0m:175:1]
 [2m175[0m |   ];
 [2m176[0m | 
 [2m177[0m |   return (
 [2m178[0m |     <div className="space-y-6 p-6">
     : [31;1m     ^^^[0m
 [2m179[0m |       <PageHeader
 [2m180[0m |         title="GL Accounts"
 [2m180[0m |         action={
     `----

Caused by:
    Syntax Error

Import trace for requested module:
./app/masters/gl/page.tsx
 ⨯ ./app/masters/gl/page.tsx
Error: 
  [31mx[0m Expression expected
     ,-[[36;1;4mC:\Users\Laptop On Rent 137\Project-8\app\masters\gl\page.tsx[0m:303:1]
 [2m303[0m |     </div>
 [2m304[0m |   );
 [2m305[0m | }
 [2m306[0m |       ) : (
     : [31;1m      ^[0m
 [2m307[0m |         <DataTable<GLAccount>
 [2m308[0m |           columns={columns}
 [2m308[0m |           rows={accounts}
     `----

Caused by:
    Syntax Error

Import trace for requested module:
./app/masters/gl/page.tsx
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
<w> [webpack.cache.PackFileCacheStrategy] Caching failed for pack: Error: ENOENT: no such file or directory, rename 'C:\Users\Laptop On Rent 137\Project-8\.next\cache\webpack\client-development-fallback\0.pack.gz_' -> 'C:\Users\Laptop On Rent 137\Project-8\.next\cache\webpack\client-development-fallback\0.pack.gz'
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⨯ app\masters\gl\page.tsx (234:14) @ showForm
 ⨯ ReferenceError: showForm is not defined
    at GLMasterPage (./app/masters/gl/page.tsx:231:31)
digest: "2754331437"
[0m [90m 232 |[39m             className[33m=[39m[32m"rounded-lg bg-brand px-4 py-2 text-sm font-medium text-white hover:bg-opacity-90 transition-all"[39m[0m
[0m [90m 233 |[39m           [33m>[39m[0m
[0m[31m[1m>[22m[39m[90m 234 |[39m             {showForm [33m?[39m [32m"Cancel"[39m [33m:[39m [32m"+ Add Account"[39m}[0m
[0m [90m     |[39m              [31m[1m^[22m[39m[0m
[0m [90m 235 |[39m           [33m<[39m[33m/[39m[33mbutton[39m[33m>[39m[0m
[0m [90m 236 |[39m         }[0m
[0m [90m 237 |[39m       [33m/[39m[33m>[39m[0m
 ⨯ app\masters\gl\page.tsx (234:14) @ showForm
 ⨯ ReferenceError: showForm is not defined
    at GLMasterPage (./app/masters/gl/page.tsx:231:31)
digest: "2754331437"
[0m [90m 232 |[39m             className[33m=[39m[32m"rounded-lg bg-brand px-4 py-2 text-sm font-medium text-white hover:bg-opacity-90 transition-all"[39m[0m
[0m [90m 233 |[39m           [33m>[39m[0m
[0m[31m[1m>[22m[39m[90m 234 |[39m             {showForm [33m?[39m [32m"Cancel"[39m [33m:[39m [32m"+ Add Account"[39m}[0m
[0m [90m     |[39m              [31m[1m^[22m[39m[0m
[0m [90m 235 |[39m           [33m<[39m[33m/[39m[33mbutton[39m[33m>[39m[0m
[0m [90m 236 |[39m         }[0m
[0m [90m 237 |[39m       [33m/[39m[33m>[39m[0m
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⨯ app\masters\gl\page.tsx (272:14) @ showForm
 ⨯ ReferenceError: showForm is not defined
    at GLMasterPage (./app/masters/gl/page.tsx:241:31)
digest: "1749921290"
[0m [90m 270 |[39m             className[33m=[39m[32m"rounded-lg bg-brand px-4 py-2 text-sm font-medium text-white hover:bg-opacity-90 transition-all"[39m[0m
[0m [90m 271 |[39m           [33m>[39m[0m
[0m[31m[1m>[22m[39m[90m 272 |[39m             {showForm [33m?[39m [32m"Cancel"[39m [33m:[39m [32m"+ Add Account"[39m}[0m
[0m [90m     |[39m              [31m[1m^[22m[39m[0m
[0m [90m 273 |[39m           [33m<[39m[33m/[39m[33mbutton[39m[33m>[39m[0m
[0m [90m 274 |[39m         }[0m
[0m [90m 275 |[39m       [33m/[39m[33m>[39m[0m
 ⨯ app\masters\gl\page.tsx (272:14) @ showForm
 ⨯ ReferenceError: showForm is not defined
    at GLMasterPage (./app/masters/gl/page.tsx:241:31)
digest: "1749921290"
[0m [90m 270 |[39m             className[33m=[39m[32m"rounded-lg bg-brand px-4 py-2 text-sm font-medium text-white hover:bg-opacity-90 transition-all"[39m[0m
[0m [90m 271 |[39m           [33m>[39m[0m
[0m[31m[1m>[22m[39m[90m 272 |[39m             {showForm [33m?[39m [32m"Cancel"[39m [33m:[39m [32m"+ Add Account"[39m}[0m
[0m [90m     |[39m              [31m[1m^[22m[39m[0m
[0m [90m 273 |[39m           [33m<[39m[33m/[39m[33mbutton[39m[33m>[39m[0m
[0m [90m 274 |[39m         }[0m
[0m [90m 275 |[39m       [33m/[39m[33m>[39m[0m
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
 ⚠ Fast Refresh had to perform a full reload due to a runtime error.
